# openfisca-ceq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO  description_donnees_input.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_description_variable.md
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  REMOVE_CIRCLECI_CHECKS.md  REQUIRED_CHECKS.md  dependabot.yml
.github/workflows/: ci.yml
documentation/: ceq.md  description_donnees_input.md  multi_country_comparison.md
notebooks/: cote_d_ivoire.ipynb  example.ipynb  export.ipynb  mali.ipynb  results.ipynb  senegal.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
openfisca_ceq/: __init__.py  entities.py  indirect_tax_generator.py
openfisca_ceq/assets/: merged.csv  merged.xls  merged_by_coicop.xlsx  unit_cost_of_education_public_service_by_country.csv
openfisca_ceq/tests/: test_add_ceq_framework.py  test_calibration.py  test_indirect_tax_variables_generator.py  test_input_data.py  test_inversion.py  test_load_country.py  test_survey_scenario.py  tests_data_dtypes.py
openfisca_ceq/tests/reforms/: modify_social_security_taxation.yaml
openfisca_ceq/tests/situations/: final_income.yaml
openfisca_ceq/tools/: data_ceq_correspondence.py  expenditures_loader.py  income_loader.py  survey_scenario.py  tax_benefit_system_ceq_completion.py  tax_benefit_system_completion.py  variables_generator.py
openfisca_ceq/tools/data/: __init__.py  education_unit_cost.py  expenditures_loader.py  income_loader.py  income_targets.py  tax_targets.py
openfisca_ceq/tools/indirect_taxation/: consumption_items_nomenclature.py  specific_taxes.py  tax_benefit_system_indirect_taxation_completion.py  variables_generator.py
openfisca_ceq/tools/results/: imports.py  inequality.py
openfisca_ceq/variables/: benefits.py  contributions.py  housing.py  income.py  statistics.py  stats.py  subsidies.py  taxes.py
openfisca_ceq/variables/transfers/: cash_transfers.py  in_kind_transfers.py
